implement items API

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- =================== header ================== -->
-    <header>
+    <header id="root">
       <nav>
         <a class="logo" href=""
           ><img src="./img/logo.png" alt="logo" />Enviro<span>App</span></a
@@ -58,7 +58,7 @@
         </form>
       </section>
       <section id="item-container">
-        <article>
+        <!-- <article>
           <h3 id="item-title">Shoes</h3>
           <img src="./img/shoe.jpg" alt="" />
           <div>
@@ -67,62 +67,14 @@
             <p>Phone Number:<span>08733355566</span></p>
           </div>
           <button>Call Doner</button>
-        </article>
-        <article>
-          <h3 id="item-title">Shoes</h3>
-          <img src="./img/logo.png" alt="" />
-          <div>
-            <p>Name:<span>Maziar</span></p>
-            <p>Post code:<span>M20 1LL</span></p>
-            <p>Phone Number:<span>08733355566</span></p>
-          </div>
-          <button>Call Doner</button>
-        </article>
-        <article>
-          <h3 id="item-title">Shoes</h3>
-          <img src="./img/natur.jpg" alt="" />
-          <div>
-            <p>Name:<span>Maziar</span></p>
-            <p>Post code:<span>M20 1LL</span></p>
-            <p>Phone Number:<span>08733355566</span></p>
-          </div>
-          <button>Call Doner</button>
-        </article>
-        <article>
-          <h3 id="item-title">Shoes</h3>
-          <img src="./img/natur.jpg" alt="" />
-          <div>
-            <p>Name:<span>Maziar</span></p>
-            <p>Post code:<span>M20 1LL</span></p>
-            <p>Phone Number:<span>08733355566</span></p>
-          </div>
-          <button>Call Doner</button>
-        </article>
-        <article>
-          <h3 id="item-title">Shoes</h3>
-          <img src="./img/natur.jpg" alt="" />
-          <div>
-            <p>Name:<span>Maziar</span></p>
-            <p>Post code:<span>M20 1LL</span></p>
-            <p>Phone Number:<span>08733355566</span></p>
-          </div>
-          <button>Call Doner</button>
-        </article>
-        <article>
-          <h3 id="item-title">Shoes</h3>
-          <img src="./img/natur.jpg" alt="" />
-          <div>
-            <p>Name:<span>Maziar</span></p>
-            <p>Post code:<span>M20 1LL</span></p>
-            <p>Phone Number:<span>08733355566</span></p>
-          </div>
-          <button>Call Doner</button>
-        </article>
+        </article> -->
       </section>
     </main>
     <!-- ===================== footer =================== -->
     <footer>
       <div><p>This is footer</p></div>
     </footer>
+    <script src="./script.js"></script>
+    <script src="./items.js"></script>
   </body>
 </html>
